@@ -1,3 +1,7 @@
+2010-06-02  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Fixed bug #11219: Incorrect cHash stored when bypassing parameters
+
 2010-06-01  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #12383: Append suffix depending on GETvars
